--- a/tests/unit/bash/bash_pkg_conditional_rpm.bats.jinja
+++ b/tests/unit/bash/bash_pkg_conditional_rpm.bats.jinja
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Mock the "rpm" command
-# mocked package: coconut-4.5.17-8.fc31
+# mocked package: coconut-4.5.17-8
 # The mock is used to avoid the need to have a specific RPM package in a
 # specific version installed on the system where this test is run.
 function rpm()
@@ -9,7 +9,7 @@ function rpm()
     if [[ "$*" == "--quiet -q coconut" ]] ; then
         return 0
     elif [[ "$*" ==  "-q --queryformat %{VERSION}-%{RELEASE} coconut" ]] ; then
-        echo "4.5.17-8.fc31"
+        echo "4.5.17-8"
         return 0
     else
         echo "BATS mock for rpm doesn't support this command"
@@ -26,51 +26,51 @@ export -f rpm
     {{{ bash_pkg_conditional_rpm("coconut", "5", "<") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "5.0", "<") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "5.0.0-1", "<") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "5.0.0-1.fc31", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "5.0.0-1", "<") | indent(4) }}}
 
     {{{ bash_pkg_conditional_rpm("coconut", "5", "<=") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "5.0", "<=") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "5.0.0-1", "<=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "5.0.0-1.fc31", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "5.0.0-1", "<=") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-9.fc31", "<") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-10.fc31", "<") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18-1.fc31", "<") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18-12.fc31", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-9", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-10", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18-1", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18-12", "<") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-9.fc31", "<=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-10.fc31", "<=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18-1.fc31", "<=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18-12.fc31", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-9", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-10", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18-1", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18-12", "<=") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-7.fc31", ">") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.16-1.fc31", ">") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-9.fc31", ">") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-1.fc31", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-7", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.16-1", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-9", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-1", ">") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-7.fc31", ">=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.16-1.fc31", ">=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-9.fc31", ">=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-1.fc31", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-7", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.16-1", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-9", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-1", ">=") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8.fc31", "<=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8.fc31", "==") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8.fc31", ">=") | indent(4) }}}
-    ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8.fc31", "!=") | indent(4) }}} )
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8", "==") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8", ">=") | indent(4) }}}
+    ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8", "!=") | indent(4) }}} )
 
     ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8", "==") | indent(4) }}} )
     ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17", "==") | indent(4) }}} )
 
-    ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8.fc44", "!=") | indent(4) }}} )
-    ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8.fc44", "==") | indent(4) }}} )
+    ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8", "!=") | indent(4) }}} )
+    ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-8", "==") | indent(4) }}} )
 
     {{{ bash_pkg_conditional_rpm("coconut", "3", ">") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "3.0", ">") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "3.0.0-1", ">") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "3.0.0-1.fc31", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "3.0.0-1", ">") | indent(4) }}}
 
     {{{ bash_pkg_conditional_rpm("coconut", "3", ">") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "3.0", ">=") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "3.0.0-1", ">=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "3.0.0-1.fc31", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "3.0.0-1", ">=") | indent(4) }}}
 }
