Add a simpler example of the bash_pkg_conditional use
I expect the usage coconut>=4.5 to be the most common - if you have an
upstream version that is known to have a feature, then it is the upper
bound of all version numbers that may have it, as a feature may be
backported to an earlier version.  Therefore, various distributions
could specify their distribution-specific version specifiers if they are
after it, and a catch-all spec would look like a safe comparison against
the upstream version, not considering the release number and maybe even
not the minor number.

--- a/tests/unit/bash/bash_pkg_conditional_rpm.bats.jinja
+++ b/tests/unit/bash/bash_pkg_conditional_rpm.bats.jinja
@@ -48,6 +48,8 @@ export -f rpm
     {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-9", ">") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-1", ">") | indent(4) }}}
 
+    {{{ bash_pkg_conditional_rpm("coconut", "4.5", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "4.4.99", ">=") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "4.5.17-7", ">=") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "4.5.16-1", ">=") | indent(4) }}}
     {{{ bash_pkg_conditional_rpm("coconut", "4.1.1-9", ">=") | indent(4) }}}
