Fix quoting problems
The macro is used both in templates and in yaml files but yaml
files have epectations on quoting. This change prevents duplicated
single quotes appearing in the Ansible tasks that use the package
template.

--- a/shared/macros/10-ansible.jinja
+++ b/shared/macros/10-ansible.jinja
@@ -727,7 +727,7 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
 {{%- if ver -%}}
 "{{{ package }}}" in ansible_facts.packages and (ansible_facts.packages["{{{ package }}}"] | last)["version"] is version("{{{ ver }}}", "{{{ op }}}")
 {{%- else -%}}
-'"{{{ package }}}" in ansible_facts.packages'
+"{{{ package }}}" in ansible_facts.packages
 {{%- endif -%}}
 {{%- endmacro -%}}
 
