--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1572,14 +1572,14 @@ Ensures that given mount point is in :code:`/etc/fstab`.
 mount_point_match_regexp="$(printf "[[:space:]]%s[[:space:]]" {{{ mount_point }}})"
 
 # If the mount point is not in /etc/fstab, get previous mount options from /etc/mtab
-if [ "$(grep -c "$mount_point_match_regexp" /etc/fstab)" -eq 0 ]; then
+if ! grep "$mount_point_match_regexp" /etc/fstab; then
     # runtime opts without some automatic kernel/userspace-added defaults
     previous_mount_opts=$(grep "$mount_point_match_regexp" /etc/mtab | head -1 |  awk '{print $4}' \
                 | sed -E "s/(rw|defaults|seclabel|{{{ mount_opt }}})(,|$)//g;s/,$//")
     [ "$previous_mount_opts" ] && previous_mount_opts+=","
     echo "{{{ fs_spec }}} {{{ mount_point }}} {{{ type }}} defaults,${previous_mount_opts}{{{ mount_opt }}} 0 0" >> /etc/fstab
 # If the mount_opt option is not already in the mount point's /etc/fstab entry, add it
-elif [ "$(grep "$mount_point_match_regexp" /etc/fstab | grep -c "{{{ mount_opt }}}")" -eq 0 ]; then
+elif ! grep "$mount_point_match_regexp" /etc/fstab | grep "{{{ mount_opt }}}"; then
     previous_mount_opts=$(grep "$mount_point_match_regexp" /etc/fstab | awk '{print $4}')
     sed -i "s|\(${mount_point_match_regexp}.*${previous_mount_opts}\)|\1,{{{ mount_opt }}}|" /etc/fstab
 fi
@@ -1600,15 +1600,13 @@ grep "$mount_point_match_regexp" -q /etc/fstab \
 {{%- endmacro %}}
 
 {{#
-  # Ensure that partition is mounted at mount_point
-  # If partition already mounted at mount_point, then remount to apply option changes
+  # Ensure that partition is mounted at mount_point with correct options, but only if the partition
+  # is already mounted.
   #}}
 {{% macro bash_ensure_partition_is_mounted(mount_point) -%}}
 if mkdir -p "{{{ mount_point }}}"; then
     if mountpoint -q "{{{ mount_point }}}"; then
         mount -o remount --target "{{{ mount_point }}}"
-    else
-        mount --target "{{{ mount_point }}}"
     fi
 fi
 {{%- endmacro %}}
