shared/applicability: Replace partition-tmp and partition-var-tmp with a new templated platform mount[]
The platform conditionals now check for the /etc/fstab entries
in addition to active mountpoint presence.

Also the name better reflects the nature of the check.

--- a/shared/macros/10-oval.jinja
+++ b/shared/macros/10-oval.jinja
@@ -1001,21 +1001,41 @@ Generates the :code:`<affected>` tag for OVAL check using correct product platfo
 {{%- endmacro %}}
 
 
-{{%- macro partition_exists_criterion(path) %}}
-{{%- set escaped_path = path | escape_id %}}
-      <criterion comment="The path {{{ path }}} is a partition's mount point" test_ref="test_partition_{{{ escaped_path  }}}_exists" />
+{{%- macro mount_active_criterion(path) %}}
+   <criterion comment="The path {{{ path }}} is an active (mounted) mount point"
+     test_ref="test_mount_active_{{{ path | escape_id }}}_exists" />
 {{%- endmacro %}}
 
-{{%- macro partition_exists_test_object(path) %}}
+{{%- macro mount_configured_fstab_criterion(path) %}}
+   <criterion comment="The path {{{ path }}} is a mount point configured in /etc/fstab"
+     test_ref="test_mount_configured_fstab_{{{ path | escape_id }}}_exists" />
+{{%- endmacro %}}
+
+{{%- macro mount_active_test_object(path) %}}
 {{%- set escaped_path = path | escape_id %}}
-  <linux:partition_test check="all" check_existence="all_exist"
-      comment="Partition {{{ path }}} exists"
-      id="test_partition_{{{ escaped_path }}}_exists"
-  version="1">
-    <linux:object object_ref="object_partition_{{{ escaped_path }}}_exists" />
+  <linux:partition_test check="all" check_existence="all_exist" version="1"
+      comment="Mountpoint {{{ path }}} exists"
+      id="test_mount_active_{{{ escaped_path }}}_exists">
+    <linux:object object_ref="object_mount_active_{{{ escaped_path }}}_exists" />
   </linux:partition_test>
 
-  <linux:partition_object id="object_partition_{{{ escaped_path }}}_exists" version="1">
+  <linux:partition_object id="object_mount_active_{{{ escaped_path }}}_exists" version="1">
     <linux:mount_point>{{{ path }}}</linux:mount_point>
   </linux:partition_object>
 {{%- endmacro %}}
+
+{{%- macro mount_configured_fstab_test_object(path) %}}
+{{%- set escaped_path = path | escape_id %}}
+  <ind:textfilecontent54_test check="all" check_existence="all_exist" version="1"
+      comment="Mountpoint {{{ path }}} is configured"
+      id="test_mount_configured_fstab_{{{ escaped_path }}}_exists">
+    <ind:object object_ref="object_mount_configured_fstab_{{{ escaped_path }}}_exists" />
+  </ind:textfilecontent54_test>
+
+  <ind:textfilecontent54_object id="object_mount_configured_fstab_{{{ escaped_path }}}_exists" version="1">
+    <ind:filepath>/etc/fstab</ind:filepath>
+    <ind:pattern operation="pattern match">^[\s]*[\S]+[\s]+{{{ path | escape_regex }}}[\s]+[\S]+[\s]+([\S]+)</ind:pattern>
+    <ind:instance datatype="int">1</ind:instance>
+  </ind:textfilecontent54_object>
+{{%- endmacro %}}
+
