shared/applicability: Replace partition-tmp and partition-var-tmp with a new templated platform mount[]
The platform conditionals now check for the /etc/fstab entries
in addition to active mountpoint presence.

Also the name better reflects the nature of the check.

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -2216,8 +2216,8 @@ fi
 {{%- endmacro -%}}
 
 
-{{%- macro bash_partition_conditional(path) -%}}
-'findmnt --kernel "{{{ path }}}" > /dev/null'
+{{%- macro bash_mount_conditional(path) -%}}
+'findmnt --kernel "{{{ path }}}" > /dev/null || findmnt --fstab "{{{ path }}}" > /dev/null'
 {{%- endmacro -%}}
 
 
