OCPBUGS 7816: Fix remediation for sshd-set-loglevel-info
This fixes the remediation for rule sshd-set-loglevel-info.

--- a/shared/macros/10-kubernetes.jinja
+++ b/shared/macros/10-kubernetes.jinja
@@ -39,7 +39,7 @@ RekeyLimit {{.var_rekey_limit_size}} {{.var_rekey_limit_time}}
 # Logging
 #SyslogFacility AUTH
 SyslogFacility AUTHPRIV
-#LogLevel INFO
+LogLevel INFO
 
 # Authentication:
 
