--- a/shared/macros/10-ocil.jinja
+++ b/shared/macros/10-ocil.jinja
@@ -702,7 +702,7 @@ ocil_clause: '"{{{ part }}} is not a mountpoint" is returned'
     If the system is configured to prevent the loading of the <code>{{{ module }}}</code> kernel module,
     it will contain lines inside any file in <code>/etc/modprobe.d</code> or the deprecated<code> /etc/modprobe.conf</code>.
     These lines instruct the module loading system to run another program (such as <code>/bin/true</code>) upon a module <code>install</code> event.
-    {{% if product in ["ol7", "ol8", "rhel7", "rhel8"] %}}
+    {{% if "ol" in product or product in ["rhel7", "rhel8"] %}}
     These lines can also instruct the module loading system to ignore the <code>{{{ module }}}</code> kernel module via <code>blacklist</code> keyword.
     {{% endif %}}
     Run the following command to search for such lines in all files in <code>/etc/modprobe.d</code> and the deprecated <code>/etc/modprobe.conf</code>:
