feature: bash_replace_or_append: add word_boundary
Sometimes data does not end at word boundary as regexp word boundary \> understands it.

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1536,9 +1536,10 @@ cce="{{{ cce_identifiers['cce'] }}}"
 :param format: Optional argument, The printf-like format string that will be given stripped key and value as arguments, so e.g. ``%s=%s` will result in key=value substitution (i.e. without spaces around =)
 :param key_regex: Optional argument, If not empty string, used as regex to match key.
 :param ignore_case: boolean, Default true.
+:param word_boundary: regex, Default "\>".
 
 #}}
-{{%- macro bash_replace_or_append(config_file, key, value, format='%s = %s', key_regex='', ignore_case=true) -%}}
+{{%- macro bash_replace_or_append(config_file, key, value, format='%s = %s', key_regex='', ignore_case=true, word_boundary="\\>") -%}}
 {{%- if key_regex == '' -%}}
 {{%- set key_regex = key -%}}
 {{%- endif -%}}
@@ -1563,11 +1564,11 @@ stripped_key="${stripped_key//[$'^=$,;+']}"
 printf -v formatted_output "{{{ format }}}" "${stripped_key}" "{{{ value }}}"
 
 # If the key exists, change it. Otherwise, add it to the config_file.
-# We search for the key string followed by a word boundary (matched by \>),
+# We search for the key string followed by a word boundary (matched by {{{ word_boundary }}}),
 # so if we search for 'setting', 'setting2' won't match.
-if LC_ALL=C "${grep_command[@]}" -q -m 1 -e "{{{ key_regex }}}\\>" "{{{ config_file }}}"; then
+if LC_ALL=C "${grep_command[@]}" -q -m 1 -e "{{{ key_regex ~ word_boundary }}}" "{{{ config_file }}}"; then
     {{{ bash_sed_escape_replacement("formatted_output", "escaped_formatted_output") }}}
-    LC_ALL=C "${sed_command[@]}" "s/{{{ key_regex }}}\\>.*/${escaped_formatted_output}/gi" "{{{ config_file }}}"
+    LC_ALL=C "${sed_command[@]}" "s/{{{ key_regex ~ word_boundary }}}.*/${escaped_formatted_output}/gi" "{{{ config_file }}}"
 else
     # \n is precaution for case where file ends without trailing newline
     {{%- if cce_identifiers and 'cce' in cce_identifiers %}}
