OCP4 STIG: Several RBAC related controls are no longer Inherently Met, let's use a manual rule to cut duplication
This patch reflects the changes to the OCP4 STIG draft. Several rules
that used to be marked as Inherently Met with justification pointing to
RBAC are now applicable/configurable with a manual rule that asks for
the RBAC rules to be reviewed.

In order to cut down on duplication and provide the same rendered
spreadsheet output as DISA expects, I also implemented a manual rule
that covers the requirement and its text can be resued.

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -577,3 +577,31 @@ Remove {{{ verb }}} permissions from any unauthorized user or group by performin
 
 Where ROLE/CLUSTER_ROLE is the role granting user {{{ verb }}} permission to resources in openshift-logging namespace.
 {{%- endmacro %}}
+
+{{#
+Fixtext for how to restrict RBAC permissions for cluster logging
+
+:param verb: The RBAC verb to restrict
+
+#}}
+{{% macro fix_openshift_rbac_least_privilege() -%}}
+If users or groups exist that are bound to roles they must not have, modify the user or group permissions using the following cluster and local role binding commands:
+
+Remove a User from a Cluster RBAC role by executing the following:
+
+oc adm policy remove-cluster-role-from-user role username
+
+Remove a Group from a Cluster RBAC role by executing the following:
+
+oc adm policy remove-cluster-role-from-group role groupname
+
+Remove a User from a Local RBAC role by executing the following:
+
+oc adm policy remove-role-from-user role username
+
+Remove a Group from a Local RBAC role by executing the following:
+
+oc adm policy remove-role-from-group role groupname
+
+NOTE: For additional information. https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html
+{{%- endmacro %}}
